crates/tree-sitter-qmd/tree-sitter-markdown/grammar.js
        document: $ => seq(
            optional(alias($.minus_metadata, $.metadata)),
            alias(prec.right(repeat($._block_not_section)), $.section),
            repeat($.section),
        ),

        ///////////////////////////////////////////////////////////////////////////////////////////
        // BLOCK STRUCTURE

        // All blocks. Every block contains a trailing newline.
        _block: $ => choice(
            $._block_not_section,
            $.section,
        ),
        _block_not_section: $ => prec.right(choice(
            $.pandoc_paragraph,
            $.pandoc_block_quote,
            $.pandoc_list,
            $.pandoc_code_block,
            $.pandoc_div,
            $.pandoc_horizontal_rule,
            $.pipe_table,
            $.grid_table,
            $.caption,

            prec(-1, alias($.minus_metadata, $.metadata)),

            $.note_definition_fenced_block,
            $.inline_ref_def,

            $._soft_line_break,
            $._newline
        )),
        section: $ => choice($._section1, $._section2, $._section3, $._section4, $._section5, $._section6),
        _section1: $ => prec.right(seq(
            alias($._atx_heading1, $.atx_heading),
            repeat(choice(
                alias(choice($._section6, $._section5, $._section4, $._section3, $._section2), $.section),
                $._block_not_section
            ))
        )),
        _section2: $ => prec.right(seq(
            alias($._atx_heading2, $.atx_heading),
            repeat(choice(
                alias(choice($._section6, $._section5, $._section4, $._section3), $.section),
                $._block_not_section
            ))
        )),
        _section3: $ => prec.right(seq(
            alias($._atx_heading3, $.atx_heading),
            repeat(choice(
                alias(choice($._section6, $._section5, $._section4), $.section),
                $._block_not_section
            ))
        )),
        _section4: $ => prec.right(seq(
            alias($._atx_heading4, $.atx_heading),
            repeat(choice(
                alias(choice($._section6, $._section5), $.section),
                $._block_not_section
            ))
        )),
        _section5: $ => prec.right(seq(
            alias($._atx_heading5, $.atx_heading),
            repeat(choice(
                alias($._section6, $.section),
                $._block_not_section
            ))
        )),
        _section6: $ => prec.right(seq(
            alias($._atx_heading6, $.atx_heading),
            repeat($._block_not_section)
        )),

        ///////////////////////////////////////////////////////////////////////////////////////////
        // LEAF BLOCKS

        // An ATX heading. This is currently handled by the external scanner but maybe could be
        // parsed using normal tree-sitter rules.
        //
        // https://github.github.com/gfm/#atx-headings
        pandoc_paragraph: $ => seq(
            optional($._inline_whitespace),
            $._inlines, 
            choice($._newline, $._eof)
        ),

        _inlines: $ => prec.right(seq(
            $._line,
            repeat(seq(alias($._soft_line_break, $.pandoc_soft_break), $._line))
        )),


        pandoc_math: $ => seq(
            '$',
            /[^$ \t\n\r]([ \t]*[^$ \t\n\r]+|\\\$)*/,
            // bd-ilv8p: allow inline math to span multiple lines. Each
            // line's content must still satisfy the "no whitespace
            // adjacent to a delimiter" rule, so we model multi-line
            // math as one-or-more line segments joined by
            // _soft_line_break (which itself consumes the line ending
            // plus any block-continuation prefix — `> `, list indent,
            // etc.). The break is aliased to pandoc_soft_break so the
            // post-processor can find its byte range and strip the
            // gutter when assembling the InlineMath text. The regex
            // also now excludes \r as a pre-existing CRLF correctness
            // fix.
            repeat(seq(
                alias($._soft_line_break, $.pandoc_soft_break),
                /[^$ \t\n\r]([ \t]*[^$ \t\n\r]+|\\\$)*/
            )),
            '$',
        ),

        pandoc_display_math: $ => seq(
            '$$',
            /([^$]|[$][^$]|\\\$)+/,
            '$$'
        ),

        pandoc_code_span: $ => prec.right(seq(
            alias($._code_span_start, $.code_span_delimiter),
            // this is a goofy construction but it lets the external scanner in to
            // do add the code_span_code token
            alias(repeat1(choice(
                    /[^`\n\r]+/,
                    /[`]/,
                    // bd-ilv8p: line breaks inside content. The scanner's
                    // parse_code_span look-ahead allows the opener to commit
                    // across newlines (up to a blank line); _soft_line_break
                    // is _soft_line_ending + optional(block_continuation), so
                    // the `> ` / list-indent gutter is consumed structurally
                    // here rather than appearing in the text segments.
                    alias($._soft_line_break, $.pandoc_soft_break)
                )), $.content),
            alias($._code_span_close, $.code_span_delimiter),
            optional($.attribute_specifier)
        )),

        attribute_specifier: $ => seq(
            '{',
            optional($._attr_ws),
            optional(choice(
                $.raw_specifier, // =aslkjfdasd
                $.language_specifier, // python
                $.commonmark_specifier,
                // #id
                // .class
                // #id .class
                // key=value
                // NOT: python .class
                alias($._commonmark_specifier_start_with_class, $.commonmark_specifier),
                alias($._commonmark_specifier_start_with_kv, $.commonmark_specifier)
            )),
            '}'
        ),

        language_specifier: $ => choice(
            seq($._language_specifier_token,
                optional(choice(
                    $.commonmark_specifier,
                    seq(optional($._inline_whitespace), alias($._commonmark_specifier_start_with_class, $.commonmark_specifier)),
                    seq(optional($._inline_whitespace), alias($._commonmark_specifier_start_with_kv, $.commonmark_specifier))
                ))),
            seq('{', $.language_specifier, '}')
        ),

        commonmark_specifier: $ => prec.right(seq(
            optional($._inline_whitespace),
            alias(/[#][._A-Za-z0-9-]+/, $.attribute_id),
            optional(
                seq($._attr_ws,
                    choice(
                        $._commonmark_specifier_start_with_class,
                        $._commonmark_specifier_start_with_kv))),
            optional($._attr_ws),
        )),

        _commonmark_specifier_start_with_class: $ => prec.right(seq(
            alias(/[.][A-Za-z][A-Za-z0-9_.-]*/, $.attribute_class),
            optional(repeat(seq($._attr_ws, alias(/[.][A-Za-z][A-Za-z0-9_-]*/, $.attribute_class)))),
            optional(seq($._attr_ws, $._commonmark_specifier_start_with_kv)),
            optional($._attr_ws),
        )),

        _commonmark_specifier_start_with_kv: $ => prec.right(seq(
            alias($._commonmark_key_value_specifier, $.key_value_specifier),
            optional(repeat(seq(optional($._attr_ws), alias($._commonmark_key_value_specifier, $.key_value_specifier)))),
            optional($._attr_ws)
        )),

        pandoc_str: $ => choice(new RegExp(PANDOC_REGEX_STR, 'u'), '|', $._pandoc_lt_str),

        // CONTAINER BLOCKS

        ///////////////////////////////////////////////////////////////////////////////////////////
        // A block quote. This is the most basic example of a container block handled by the
        // external scanner.
        //
        // https://github.github.com/gfm/#block-quotes
        pandoc_block_quote: $ => seq(
            alias($._block_quote_start, $.block_quote_marker),
            optional($.block_continuation),
            repeat($._block),
            $._block_close,
            optional($.block_continuation)
        ),

        ///////////////////////////////////////////////////////////////////////////////////////////
        // A list. This grammar does not differentiate between loose and tight lists for efficiency
        // reasons.
        //
        // Lists can only contain list items with list markers of the same type. List items are
        // handled by the external scanner.
        //
        // https://github.github.com/gfm/#lists
        pandoc_list: $ => prec.right(choice(
            $._list_plus,
            $._list_minus,
            $._list_star,
            $._list_dot,
            $._list_parenthesis,
            $._list_example
        )),
        _list_plus: $ => prec.right(repeat1(alias($._list_item_plus, $.list_item))),
        _list_minus: $ => prec.right(repeat1(alias($._list_item_minus, $.list_item))),
        _list_star: $ => prec.right(repeat1(alias($._list_item_star, $.list_item))),
        _list_dot: $ => prec.right(repeat1(alias($._list_item_dot, $.list_item))),
        _list_parenthesis: $ => prec.right(repeat1(alias($._list_item_parenthesis, $.list_item))),
        _list_example: $ => prec.right(repeat1(alias($._list_item_example, $.list_item))),
        // Some list items can not interrupt a paragraph and are marked as such by the external
        // scanner.
        list_marker_plus: $ => choice($._list_marker_plus, $._list_marker_plus_dont_interrupt),
        list_marker_minus: $ => choice($._list_marker_minus, $._list_marker_minus_dont_interrupt),
        list_marker_star: $ => choice($._list_marker_star, $._list_marker_star_dont_interrupt),
        list_marker_dot: $ => choice($._list_marker_dot, $._list_marker_dot_dont_interrupt),
        list_marker_parenthesis: $ => choice($._list_marker_parenthesis, $._list_marker_parenthesis_dont_interrupt),
        list_marker_example: $ => choice($._list_marker_example, $._list_marker_example_dont_interrupt),
        _newline: $ => seq(
            $._line_ending,
            optional($.block_continuation)
        ),

        _soft_line_break: $ => seq(
            $._soft_line_ending,
            optional($.block_continuation)
        ),


        _inline_whitespace: $ => prec(-1, choice($._whitespace, $._soft_line_break)),
        // Like _inline_whitespace, but matches a run of whitespace/soft-line-breaks
        // so attribute lists can span multiple lines with leading indent on
        // continuation lines (e.g. ![](x.png){\n  .a\n  .b\n}).
        _attr_ws: $ => prec(-1, repeat1(choice($._whitespace, $._soft_line_break))),
