crates/tree-sitter-qmd/tree-sitter-markdown/test/corpus/code_span.txt
================================================================================
1 (note how code span delimiters eat leading spaces; needs postprocess)
================================================================================
Maybe like this `hello world` and stuff. and ``this one ` will work?`` yeah.
--------------------------------------------------------------------------------
    (document
      (section
        (pandoc_paragraph
          (pandoc_str)
          (pandoc_space)
          (pandoc_str)
          (pandoc_space)
          (pandoc_str)
          (pandoc_code_span
            (code_span_delimiter)
            (content)
            (code_span_delimiter))
          (pandoc_space)
          (pandoc_str)
          (pandoc_space)
          (pandoc_str)
          (pandoc_space)
          (pandoc_str)
          (pandoc_code_span
            (code_span_delimiter)
            (content)
            (code_span_delimiter))
          (pandoc_space)
          (pandoc_str))))
================================================================================
2
================================================================================
A `code span with an attribute`{r}
--------------------------------------------------------------------------------
    (document
      (section
        (pandoc_paragraph
          (pandoc_str)
          (pandoc_code_span
            (code_span_delimiter)
            (content)
            (code_span_delimiter)
            (attribute_specifier
              (language_specifier))))))
================================================================================
3
================================================================================
A `code span with an id`{#id .class key=value}
--------------------------------------------------------------------------------
    (document
      (section
        (pandoc_paragraph
          (pandoc_str)
          (pandoc_code_span
            (code_span_delimiter)
            (content)
            (code_span_delimiter)
            (attribute_specifier
              (commonmark_specifier
                (attribute_id)
                (attribute_class)
                (key_value_specifier
                  (key_value_key)
                  (key_value_value))))))))
================================================================================
4
================================================================================
`start a paragraph` will this work?
--------------------------------------------------------------------------------
    (document
      (section
        (pandoc_paragraph
          (pandoc_code_span
            (code_span_delimiter)
            (content)
            (code_span_delimiter))
          (pandoc_space)
          (pandoc_str)
          (pandoc_space)
          (pandoc_str)
          (pandoc_space)
          (pandoc_str))))
================================================================================
5 thick code spans
================================================================================
``a thick ` code span`` should work.
--------------------------------------------------------------------------------
    (document
      (section
        (pandoc_paragraph
          (pandoc_code_span
            (code_span_delimiter)
            (content)
            (code_span_delimiter))
          (pandoc_space)
          (pandoc_str)
          (pandoc_space)
          (pandoc_str))))
================================================================================
6 multi-line code span in a plain paragraph
================================================================================
A `code
span` test.
--------------------------------------------------------------------------------
(document
  (section
    (pandoc_paragraph
      (pandoc_str)
      (pandoc_code_span
        (code_span_delimiter)
        (content
          (pandoc_soft_break))
        (code_span_delimiter))
      (pandoc_space)
      (pandoc_str))))
================================================================================
7 three-line code span
================================================================================
A `code
spanning
three lines` here.
--------------------------------------------------------------------------------
(document
  (section
    (pandoc_paragraph
      (pandoc_str)
      (pandoc_code_span
        (code_span_delimiter)
        (content
          (pandoc_soft_break)
          (pandoc_soft_break))
        (code_span_delimiter))
      (pandoc_space)
      (pandoc_str))))
================================================================================
8 multi-line code span inside block quote (with `> ` gutter)
================================================================================
> A `code
> span` in bq.
--------------------------------------------------------------------------------
(document
  (section
    (pandoc_block_quote
      (block_quote_marker)
      (pandoc_paragraph
        (pandoc_str)
        (pandoc_code_span
          (code_span_delimiter)
          (content
            (pandoc_soft_break))
          (code_span_delimiter))
        (pandoc_space)
        (pandoc_str)
        (pandoc_space)
        (pandoc_str)))))
================================================================================
9 multi-line code span with lazy continuation (no `> ` on line 2)
================================================================================
> A `code
span` lazy.
--------------------------------------------------------------------------------
(document
  (section
    (pandoc_block_quote
      (block_quote_marker)
      (pandoc_paragraph
        (pandoc_str)
        (pandoc_code_span
          (code_span_delimiter)
          (content
            (pandoc_soft_break))
          (code_span_delimiter))
        (pandoc_space)
        (pandoc_str)))))
================================================================================
10 multi-line code span inside a bullet-list item
================================================================================
- item with `inline
  code` here
--------------------------------------------------------------------------------
(document
  (section
    (pandoc_list
      (list_item
        (list_marker_minus)
        (pandoc_paragraph
          (pandoc_str)
          (pandoc_space)
          (pandoc_str)
          (pandoc_code_span
            (code_span_delimiter)
            (content
              (pandoc_soft_break
                (block_continuation)))
            (code_span_delimiter))
          (pandoc_space)
          (pandoc_str))))))
