crates/tree-sitter-qmd/tree-sitter-markdown/test/corpus/math.txt
================================================================================
1
================================================================================
$e=mc^2$
--------------------------------------------------------------------------------
    (document
      (section
        (pandoc_paragraph
          (pandoc_math))))
================================================================================
2 (mismatched braces and other special characters inside math)
================================================================================
$e=m[[#]$
--------------------------------------------------------------------------------
    (document
      (section
        (pandoc_paragraph
          (pandoc_math))))
================================================================================
3 - spaces and more stuff in a paragraph
================================================================================
Math paragraph: $a b dc--[[]##$.
--------------------------------------------------------------------------------
    (document
      (section
        (pandoc_paragraph
          (pandoc_str)
          (pandoc_space)
          (pandoc_str)
          (pandoc_str)
          (pandoc_space)
          (pandoc_math)
          (pandoc_str))))
================================================================================
4 - display math
================================================================================
Math display extended inline: $$A long
equation that spans
many lines.
and then finishes.
$$ And the rest of the paragraph
--------------------------------------------------------------------------------
    (document
      (section
        (pandoc_paragraph
          (pandoc_str)
          (pandoc_space)
          (pandoc_str)
          (pandoc_space)
          (pandoc_str)
          (pandoc_space)
          (pandoc_str)
          (pandoc_str)
          (pandoc_space)
          (pandoc_display_math)
          (pandoc_space)
          (pandoc_str)
          (pandoc_space)
          (pandoc_str)
          (pandoc_space)
          (pandoc_str)
          (pandoc_space)
          (pandoc_str)
          (pandoc_space)
          (pandoc_str)
          (pandoc_space)
          (pandoc_str))))
================================================================================
5 - mixed math
================================================================================
$$
\text{if $x> B$}
$$
--------------------------------------------------------------------------------
    (document
      (section
        (pandoc_paragraph
          (pandoc_display_math))))
================================================================================
6 - multi-line inline math in a plain paragraph
================================================================================
Math $a +
b$ here.
--------------------------------------------------------------------------------
(document
  (section
    (pandoc_paragraph
      (pandoc_str)
      (pandoc_space)
      (pandoc_math
        (pandoc_soft_break))
      (pandoc_space)
      (pandoc_str))))
================================================================================
7 - multi-line inline math inside a block quote (with `> ` gutter)
================================================================================
> Math $a +
> b$ here.
--------------------------------------------------------------------------------
(document
  (section
    (pandoc_block_quote
      (block_quote_marker)
      (pandoc_paragraph
        (pandoc_str)
        (pandoc_space)
        (pandoc_math
          (pandoc_soft_break))
        (pandoc_space)
        (pandoc_str)))))
================================================================================
8 - multi-line inline math inside a bullet-list item
================================================================================
- Math $a +
  b$ here.
--------------------------------------------------------------------------------
(document
  (section
    (pandoc_list
      (list_item
        (list_marker_minus)
        (pandoc_paragraph
          (pandoc_str)
          (pandoc_space)
          (pandoc_math
            (pandoc_soft_break))
          (pandoc_space)
          (pandoc_str))))))
